...
        android:id="@+id/homeHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="hHomeClicked"
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/homePortfolioButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <Button
        android:id="@+id/homePortfolioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="hPortfolioClicked"
        android:text="Portfolio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/homeSettingsButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/homeHomeButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <Button
...
        android:layout_marginTop="145dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coin3Value"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bitcoinButton"
        android:layout_width="97dp"
        android:layout_height="37dp"
        android:layout_marginBottom="116dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="27dp"
        android:text="Bitcoin"
        app:layout_constraintBottom_toTopOf="@+id/homeHomeButton"
        app:layout_constraintEnd_toStartOf="@+id/litecoinButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/litecoinButton"
...
